k8s-deployment/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: aes-server-service
  namespace: ingress-nginx
spec:
  selector:
    app: aes-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aes-server-deployment
  namespace: ingress-nginx
  labels:
    app: aes-server
    app.kubernetes.io/name: aes-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aes-server
  template:
    metadata:
      labels:
        app: aes-server
    spec:
      containers:
      - name: aes-server
        image: aasourav/aes-meal-server:0.27
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
