k8s-deployment/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: aes-frontend-service
  namespace: test-ns
spec:
  selector:
    app: aes-frontend
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aes-frontend-deployment
  namespace: test-ns
  labels:
    app: aes-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aes-frontend
  template:
    metadata:
      labels:
        app: aes-frontend
    spec:
      containers:
      - name: aes-frontend
        image: aasourav/aes-meal:0.84
        imagePullPolicy: IfNotPresent
        # volumeMounts:
        #   - mountPath: /usr/share/nginx/html/config
        #     name: config-vol
        ports:
        - containerPort: 80
