k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aes-app-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: aes-frontend-service
            port:
              number: 80
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /be/?(.*)
        backend:
          service:
            name: aes-server-service
            port:
              number: 8080
